# WebWeaveX

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  phase10.ps1  phase10_cli.txt  phase10_mvn_java.txt  phase10_mvn_kotlin.txt  phase10_npm.txt  phase10_pip.txt  phase10_pub.txt  phase10_website.txt  setup.py  temp_cli_out.txt
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: crawl_speed.py  distributed_scaling.py  js_rendering.py  report.md
cli/: webweavex.py
content_cleaner/: __init__.py
core/: README.md  pyproject.toml
core/webweavex/: __init__.py  api_server.py  async_crawler.py  async_engine.py  async_fetcher.py  cli.py  config.py  crawler.py  engine.py  exceptions.py  fetcher.py  js_renderer.py  logging.py  models.py  plugin_interface.py  plugin_loader.py  rate_limiter.py  robots.py  sitemap.py  ssl_utils.py  url_utils.py
crawler_engine/: __init__.py  site_crawler.py
docs/: architecture.md  cli.md  crawler-engine.md  getting-started.md  plugins.md  sdk.md
examples/: JavaClientExample.java  KotlinClientExample.kt  dart_client.dart  node_client.js  pubspec.yaml  python_client.py
extractor/: __init__.py  content_extractor.py  extraction_pipeline.py  markdown_converter.py  text_cleaner.py
frontier/: __init__.py  url_frontier.py
knowledge_graph/: __init__.py  exporter.py  graph_builder.py  graph_pipeline.py
link_graph/: __init__.py
parser/: __init__.py
rag/: rag_pipeline.py
reports/: FINAL_PROOF.md  FINAL_TRUTH.md  PRODUCTION_COMPLETION_SUMMARY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  REAL_EXECUTION_PROOF.md  api_validation.json  cli_proof.txt  final_verification.md  full_repository_verification.md  package_validation.md  python_core_test.txt  repo_files.txt  repo_sanity_check.md  repository_structure.md  sdk_build_results.md  sdk_execution.md  ssl_validation.txt  test_results.txt  ultimate_verification.md
scheduler/: __init__.py
scripts/: api_test.py
sdk/: __init__.py
sdk/dart/: README.md  (+6 more)
semantic/: __init__.py  entity_extractor.py  relationship_extractor.py
tests/: test_async_engine.py  test_crawl_strategy.py  test_distributed_queue.py  test_engine.py  test_extractor.py  test_js_renderer.py  test_knowledge_graph.py  test_rag_dataset.py  test_robots.py  test_site_crawler.py
website/: docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  style.css
(+80 files in other folders)
