[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "webweavex"
version = "0.1.0"
description = "AI-native web crawling platform"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["crawler", "web", "scraping", "rag", "knowledge-graph"]
authors = [
  { name = "WebWeaveX Maintainers" }
]
dependencies = [
  "httpx>=0.25.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.13.1",
  "playwright>=1.42.0",
  "pydantic>=2.6.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "spacy>=3.7.0",
  "redis>=5.0",
  "networkx>=3.0",
  "certifi>=2024.9.0"
]

[project.scripts]
webweavex = "webweavex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["webweavex"]
